bugfix/etsl-719 fixed top-nav header alignment

--- a/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/top-navigation.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/custom-components/header/top-navigation.scss
@@ -71,7 +71,8 @@
     margin-left: 10px;
   }
 
-  #top-nav-cart-img, svg {
+  #top-nav-cart-img,
+  svg {
     width: 24px;
     height: 21px;
     margin-left: 10px;
@@ -84,13 +85,13 @@
     margin-left: 10px;
     position: absolute;
     top: 43%;
-    right:10%;
+    right: 10%;
   }
 
   span.language-switch-content {
     font-size: 1rem;
     font-weight: 100;
-    font-family: GE SS Two,Arial,sans-serif;
+    font-family: GE SS Two, Arial, sans-serif;
     letter-spacing: 0;
   }
 
@@ -109,17 +110,16 @@
     text-align: center;
   }
 
-  .align-cart{
-    a > div:first-child{
-      margin-right:-10px;
-      span{
-        float:right;
+  .align-cart {
+    a > div:first-child {
+      margin-right: -10px;
+      span {
+        float: right;
       }
     }
-    a > div:nth-child(2){
+    a > div:nth-child(2) {
       padding-top: 5px;
     }
-
   }
 }
 /*
@@ -153,7 +153,7 @@ html[lang="ar"] {
       }
 
       a {
-        font-size: .875rem;
+        font-size: 0.875rem;
       }
 
       span.badge-top {
@@ -184,24 +184,23 @@ html[lang="ar"] {
       top: 40%;
     }
 
-    .align-cart{
-      a > div:first-child{
-        span{
-          float:left;
+    .align-cart {
+      a > div:first-child {
+        span {
+          float: left;
         }
       }
-      a > div:nth-child(2){
+      a > div:nth-child(2) {
         padding-top: 10px;
       }
-
     }
-    
   }
 }
 
 .top-nav-section {
   height: 48px;
-  #top-nav-cart-img, .links svg {
+  #top-nav-cart-img,
+  .links svg {
     width: 24px;
     height: 24px;
     margin-left: 10px;
@@ -213,15 +212,15 @@ html[lang="ar"] {
       a {
         padding: 0 1rem;
         @media (min-width: 992px) and (max-width: 1280px) {
-          padding: 0 .5rem;
+          padding: 0 0.5rem;
         }
         svg {
           stroke: $almost-black;
         }
-        .link-icon-wrapper{
+        .link-icon-wrapper {
           position: relative;
 
-          .link-icon{
+          .link-icon {
             position: absolute;
             top: -8px;
             right: -20px;
@@ -240,8 +239,8 @@ html[lang="ar"] {
         font-weight: 800;
         height: 47px;
       }
-      .active>a,
-      .active>a:hover,
+      .active > a,
+      .active > a:hover,
       a:hover {
         background: transparent;
         border-bottom: 2px solid $main-green;
@@ -259,7 +258,10 @@ html[lang="ar"] {
           position: relative;
           cursor: pointer;
           @media (min-width: 992px) and (max-width: 1366px) {
-            padding: 0 .5rem;
+            padding: 0 0.5rem;
+          }
+          .nav-link-icon {
+            padding-right: 0;
           }
         }
         &:last-child {
@@ -280,12 +282,99 @@ html[lang="ar"] {
         width: 8px;
         height: 5px;
       }
+      .language {
+        list-style: none;
+        text-transform: uppercase;
+        display: block;
+        padding-right: 28px;
+        position: relative;
+        a {
+          font-size: $font11;
+
+          &:after {
+            border-style: solid;
+            border-width: 1px 1px 0 0;
+            content: "";
+            display: inline-block;
+            height: 0.8em;
+            left: 7em;
+            top: 16px;
+            position: absolute;
+            transform: rotate(135deg);
+            vertical-align: top;
+            width: 0.8em;
+            padding-right: 0;
+          }
+          &.open {
+            &:after {
+              top: 1.95em;
+              transform: rotate(-45deg);
+            }
+          }
+        }
+        .arabic-lang-content {
+          font-size: $font16;
+          font-weight: 100;
+          letter-spacing: 0;
+          font-family: GE SS Two, Arial, sans-serif;
+          &:after {
+            left: 4em;
+            width: 0.5em;
+            height: 0.5em;
+          }
+          &.open {
+            &:after {
+              top: 1.35em;
+              transform: rotate(-45deg);
+            }
+          }
+        }
+      }
+
+      .language-menu {
+        display: none;
+        text-align: center;
+        left: -30px;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+        position: absolute;
+        top: 48px;
+        width: 150px;
+        z-index: 999;
+        background-color: $sand-white;
+
+        li {
+          text-transform: uppercase;
+          display: inline-block;
+          padding: 10px;
+          width: calc(100% - 45px);
+          a {
+            color: $almost-black;
+            font-size: $font11;
+            padding: 2px !important;
+            height: 20px;
+            &:after {
+              display: none;
+            }
+            &:hover {
+              color: $main-green;
+            }
+          }
+          .arabic-lang-content {
+            font-size: $font16;
+            font-weight: 100;
+            letter-spacing: 0;
+            font-family: GE SS Two, Arial, sans-serif;
+          }
+        }
+      }
     }
   }
   // there is no hover and active state in design for these links
-  .active>a,
-  .active>a:focus,
-  .active>a:hover,
+  .active > a,
+  .active > a:focus,
+  .active > a:hover,
   a:focus,
   a:hover {
     background: transparent;
@@ -304,11 +393,11 @@ html[lang="ar"] {
           }
         }
       }
-      .top-nav-left{
-        .link-icon-wrapper{
-          .link-icon{
+      .top-nav-left {
+        .link-icon-wrapper {
+          .link-icon {
             left: -20px;
-            right: auto;           
+            right: auto;
           }
         }
       }
